--- a/src/main/resources/templates/student/circleComment.html
+++ b/src/main/resources/templates/student/circleComment.html
@@ -124,6 +124,10 @@
 	window.location.href="/student/message";
 	if(getCookie("type")==4)
 	window.location.href="/student/myStudy";
+	if(getCookie("type")==5)
+	window.location.href="/student/mytraining";
+	if(getCookie("type")==6)
+	window.location.href="/student/classContentTrue";
 	}
 </script>
 	<head>
