--- a/src/main/resources/static/css/classContent.css
+++ b/src/main/resources/static/css/classContent.css
@@ -200,7 +200,25 @@ button {
 	background: cadetblue;
 	color: white;
 }
+.fg{
+	position: relative;
+	top: -100px;
+	left: 300px;
+	margin: 0px;
+}
 
+.fg button{
+	width: 150px;
+	height: 40px;
+	border-radius: 5em;
+	font-size: 20px;
+	background: #B9E3D9;
+}
+/*按钮点击后效果*/
+.fg button:hover,button:focus{
+	background: cadetblue;
+	color: white;
+}
 /*课程介绍/目录/评价*/
 .classNavigation{
 	border: 0px;
@@ -437,4 +455,85 @@ button {
 	top: -192px;
 	left: 650px;
 	font-size: 10px;
+}
+/*弹窗内容*/
+#background {
+	display: none;
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.5);//弹窗下背景颜色
+}
+#div1 {
+	background-color:rgb(185,227,217);
+	width: 50%;
+	z-index: 1;
+	margin: 15% auto;
+	overflow: auto;
+}
+#div2 {
+	background-color: rgba(240,240,240);
+	margin: auto;
+	height: 300px;
+	padding: 0 20px;
+}
+
+#close {
+	background-color:rgb(185,227,217);
+	height: 50px;
+}
+
+#close-button {
+	float: right;
+	font-size: 30px;
+	position: relative;
+	top: 20px;
+	left: -10px;
+}
+
+#foot {
+	padding: 5px 0;
+	text-align: center;
+	background: #5cd31b;
+	color: white;
+}
+#div1 input{
+	width: 20px;
+	height:20px;
+	/*position: relative;
+	top: 60px;
+	left: 80px;*/
+}
+.radioP{
+	position: relative;
+	top: 60px;
+	left: 80px;
+}
+.a{
+	position: relative;
+	top: -5px;
+	margin-right: 30px;
+}
+.tan{
+	position: relative;
+	top: 30px;
+}
+
+#imSure{
+	position: relative;
+	top: 150px;
+	left: 190px;
+}
+.we button{
+	width: 100px;
+	height: 40px;
+	font-size: 20px;
+	background: #B9E3D9;
+}
+/*按钮点击后效果*/
+.we button:hover,button:focus{
+	background: cadetblue;
+	color: white;
 }
