--- a/src/main/resources/templates/student/alumniCircle.html
+++ b/src/main/resources/templates/student/alumniCircle.html
@@ -80,7 +80,7 @@ $.ajax({
         str="";
         str=str+"<img src=\"/img/帖子.png\" class=\"img1\" /><button type=\"button\" id=\"card\" onclick=\"putTopic()\">发帖</button><button type=\"button\" id=\"card1\" onclick=\"goBack()\">返回上一页</button>";
          $.each(data,function(i,item){
-        str=str+"<hr class=\"hr1\"><div class=\"box1\"><div class=\"circle\"><p class=\"circleNum\">"+item.no+"</p></div><a onclick=\"goTopic("+item.topic_id+",'"+item.heading+"','"+item.content+"','"+item.name+"')\" class=\"cicleTitle\">"+item.heading+"</a><div class=\"cicleContent\"><p>"+item.content+"</p></div><div class=\"date\"><p>"+item.time+"</p></div><a onclick=\"goComment()\"><img src=\"/img/消息.png\" class=\"img2\"></a><div class=\"num\"><p>"+item.comment_num+"人"+"</p></div><div class=\"num1\"><p>帖子发起人:"+item.name+"</p></div></div>";
+        str=str+"<hr class=\"hr1\"><div class=\"box1\"><div class=\"circle\"><p class=\"circleNum\">"+item.no+"</p></div><a onclick=\"goTopic("+item.topic_id+",'"+item.heading+"','"+item.content+"','"+item.name+"')\" class=\"cicleTitle\">"+item.heading+"</a><div class=\"cicleContent\"><p>"+item.content+"</p></div><div class=\"date\"><p>"+item.time+"</p></div><a onclick=\"goComment("+item.topic_id+")\"><img src=\"/img/消息.png\" class=\"img2\"></a><div class=\"num\"><p>"+item.comment_num+"人"+"</p></div><div class=\"num1\"><p>帖子发起人:"+item.name+"</p></div></div>";
 			                          });
 		str=str+"<hr class=\"hr1\">";
 	     $("#view").html(str);
@@ -112,12 +112,14 @@ $.ajax({
 	setCookie("type",2);
 	window.location.href="/student/circleComment";
 	}
-	function goComment()
+	function goComment(id)
 	{
 	if(schoolID==getCookie("schoolID"))
-	  {window.location.href="/student/circleToComment";
+	  {
 	  setCookie("type",2);
-	  setCookie("topicID",id);}
+	  setCookie("topicID",id);
+	  window.location.href="/student/circleToComment";
+	  }
 	else
 	alert("不是该学校成员，不能进行操作！");
 	}
