--- a/src/main/resources/templates/student/classContentTrue.html
+++ b/src/main/resources/templates/student/classContentTrue.html
@@ -7,9 +7,12 @@
 <script src="/js/jquery.inview.min.js"></script>
 <script src="/js/cookie3.js"></script>
 <script>
+        var sum=0;
+        var is_choose;
         var courseID=getCookie("courseID");
 		window.onload=function(){
 		getCourseInfo(courseID);
+		getTopic(courseID);
 		str="";
 		if(getCookie("identification")==1)
 		{str2="我的课程";}
@@ -35,7 +38,85 @@
 <script>
 	function getCourseInfo(id)
 	{
-
+	var userID;
+	if(getCookie("userID")==null)
+	userID=0;
+	else
+	userID=getCookie("userID");
+$.ajax({
+        type:"GET", //请求方式
+        url: "/course/"+id+"?user_id="+userID ,
+        cache: false,   //如果使用缓存
+        contentType : "application/json",
+        async:false,
+        dataType: 'json',   //返回值类型
+        success:function(data){
+         $("#title").html(data.course.name);
+         $("#num").html("课程人数： "+data.num);
+         $("#author").html("讲师： "+getCookie("teacher_name"));
+         $("#introduction").html("课程简介： "+data.course.introduction);
+        document.getElementById("picture").src=data.course.picture;
+        is_choose=data.is_choose;
+        if(data.is_choose==false)
+        {
+        $("#open_btn").html("立即加入");
+        document.getElementById("open_btn").disabled="false";
+        $("#fg").html();
+		$("#menu").html("<p>目录</p><span class=\"menuContent\">还未选课，不能加载目录</span>");
+		$.ajax({
+        type:"GET", //请求方式
+        url: "/course/"+id+"/class?type=1" ,
+        async:false,
+        cache: false,   //如果使用缓存
+        contentType : "application/json",
+        dataType: 'json',   //返回值类型
+        success:function(data){
+        str="";
+         $.each(data,function(i,item){
+         sum=sum+1;
+         str=str+"<input type=\"radio\" name=\"choice\" id=\"班级"+(i+1)+"\" value=\""+item.id+"\"/><span class=\"a\">"+item.class_name+"</span>";
+			                          });
+	     $("#radioP").html(str);
+        }
+        });
+        }
+        else if(data.is_choose==true)
+        {
+        $("#open_btn").html("已加入课程");
+        document.getElementById("open_btn").disabled="true";
+        $("#fg").html("<button type=\"button\" id=\"open_btn1\">退课</button>");
+        }
+        str=" ";
+        str=str+"<p>"+">>>>教学进度：  "+data.course.teaching_progress+"</p>";
+        str=str+"<p>"+"."+"</p>";
+        str=str+"<p>"+".."+"</p>";
+        str=str+"<p>"+"..."+"</p>";
+        str=str+"<p>"+"...."+"</p>";
+        str=str+"<p>"+">>>>知识点简介：  "+data.course.knowledge_point+"</p>";
+        $("#content").html(str);
+        }
+        });
+	}
+</script>
+<script>
+	function getTopic(id)
+	{
+$.ajax({
+        type:"GET", //请求方式
+        url: "/topic1/1/"+id ,
+        cache: false,   //如果使用缓存
+        contentType : "application/json",
+        dataType: 'json',   //返回值类型
+        success:function(data){
+        str="";
+        str=str+"<img src=\"/img/帖子.png\" class=\"img1\" /><button type=\"button\" id=\"card\" onclick=\"putTopic()\">发帖</button>";
+         $.each(data,function(i,item){
+        str=str+"<hr class=\"hr1\"><div class=\"box1\"><div class=\"circle\"><p class=\"circleNum\">"+item.no+"</p></div><a onclick=\"goTopic("+item.topic_id+",'"+item.heading+"','"+item.content+"','"+item.name+"')\" class=\"cicleTitle\">"+item.heading+"</a><div class=\"cicleContent\"><p>"+item.content+"</p></div><div class=\"date\"><p>"+item.time+"</p></div><a onclick=\"goComment("+item.topic_id+")\"><img src=\"/img/消息.png\" class=\"img2\"></a><div class=\"num\"><p>"+item.comment_num+"</p></div><div class=\"num1\"><p>帖子发起人:"+item.name+"</p></div></div>";
+			                          });
+		str=str+"<hr class=\"hr1\">";
+	     $("#view").html(str);
+        }
+        });
 	}
 </script>
 <script>
@@ -56,92 +137,185 @@
    window.location.href="/student/message";}
    }
 	</script>
-	<head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="/css/classContent.css" />
-		<title>课程详情</title>
-	</head>
-	<body>
-		<!--顶部标题栏-->
-		<div id="header" class="header">
+<script>
+    function putTopic()
+	{
+	if(is_choose==false)
+	alert("你还未加入课程不能发帖！");
+	else
+	{
+	  setCookie("type",1);
+	  window.location.href="/student/circleToPut";
+	  }
+	}
+	function goTopic(id,heading,content,name)
+	{
+	if(is_choose==false)
+	setCookie("is_operate",0);
+	else
+	setCookie("is_operate",1);
+	setCookie("topicID",id);
+	setCookie("type",6);
+	window.location.href="/student/circleComment";
+	}
+	function goComment(id)
+	{
+	if(is_choose==false)
+	alert("你还未加入课程不能评论！");
+	else
+	{
+	  setCookie("type",6);
+	  setCookie("topicID",id);
+      window.location.href="/student/circleToComment";
+     }
+	}
+	function goBack()
+	{
+		if(getCookie("road")==1)
+	window.location.href="/student/myStudy";
+	if(getCookie("road")==2)
+	window.location.href="/student/schoolIndex";
+	if(getCookie("road")==3)
+	window.location.href="/student/teacher";
+	}
+</script>
+<head>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="/css/classContent.css" />
+	<title>课程详情</title>
+</head>
+<body>
+<div id="container">
+<!--顶部标题栏-->
+<div id="header" class="header">
+</div>
+<a onclick="goBack()" class="backIndex">返回上一页</a>
+<!--课程概述-->
+<div class="classPic">
+	<!--课程封面图片-->
+	<img class="Picture" id="picture"/>
+	<!--课程相关介绍-->
+	<div class="classIntroduction">
+		<p class="title" id="title"></p>
+		<p class="author" id="author"></p>
+		<p class="author" id="num"></p>
+		<p class="author" id="introduction"></p>
+		<!--立即加入按钮-->
+		<div class="join" id="join">
+			<button type="button" id="open_btn">立即加入</button>
 		</div>
-	    <a href="/student/index" class="backIndex">返回首页</a>
-	    <!--课程概述-->
-	    <div class="classPic">
-	        <!--课程封面图片-->
-	    	<img src="/img/classPic.png" class="Picture"/>
-	    	<!--课程相关介绍-->
-	    	<div class="classIntroduction">
-	    		<p class="title" id="title">里是课程标题</p>
-	    		<p class="author" id="author">讲师：某某某</p>
-	    		<p class="introduction" id="introduction">这里是课程简介巴拉巴拉巴拉巴拉巴拉可以写一堆，和下面介绍不同的地方是这个是总的课程介绍</p>
-	    		<!--立即加入按钮-->
-	    		<div class="join" id="join">
-	    		    <button type="submit">立即加入</button>
-	    		</div>
-	    	</div>
-	    	<!--导航栏-->
-            <div class="classNavigation">
-            	<div class="classbutton">
-            	    <button type="button" id="intronBtn" autofocus="autofocus">介绍</button>
-            	    <button type="button" id="menuBtn">目录</button>
-            	    <button type="button" id="viewBtn">评价</button>
-            	</div>
-            </div>	    	
-	    </div>
-	    <!--课程详情-->
-	    <div class="secondBox">
-	    	<div id="content">
-	    		<p>这里是正文部分</p>
-	    	</div>
-	    	<div id="menu">
-	    		<p>目录</p>
-	    		<span class="menuContent">这是预览课程界面，不能加载目录</span>
-	    	</div>
-	    	<div id="view">
-	    		<p>评价详情</p>
-	    		<div class="box1">
-				<div class="circle">
-				   <p class="circleNum">1</p>
-				</div>
-				<div class="cicleContent">
-					<p>帖子内容</p>
-				</div>
-				<div class="date1">
-					<p>2018-03-29</p>
-				</div>
+		<div class="fg" id="fg">
+		</div>
+	</div>
+	<!--导航栏-->
+	<div class="classNavigation">
+		<div class="classbutton">
+			<button type="button" id="intronBtn" autofocus="autofocus">介绍</button>
+			<button type="button" id="menuBtn">目录</button>
+			<button type="button" id="viewBtn">评价</button>
+		</div>
+	</div>
+</div>
+<!--课程详情-->
+<div class="secondBox">
+	<div id="content">
+	</div>
+	<div id="menu">
+	</div>
+	<!--帖子面板-->
+	<div class="panel1" id="view">
+		<!--第一篇帖子-->
+	</div>
+
+</div>
+<!--页脚-->
+<div class="footer">
+	<img class="img-logo" src="/img/logo.png" />
+	<img class="head" src="/img/字体设计.png" />
+	<div class="introduction">
+		<p>文思海辉技术有限公司旗下实用技能学习平台。与专业机构、院校合作。为您提供海量优质课堂，以及创新的在线学习体验，帮助您获得全新的个人发展和能力提升。</p>
+	</div>
+</div>
+</div>
+<!-- 弹窗内容开始 -->
+<div id="background" class="back">
+	<div id="div1" class="content">
+		<div id="close">
+			<span id="close-button">×</span>
+		</div>
+		<div id="div2">
+			<h3 class="tan">请选择班级：</h3>
+			<label class="radioP" id="radioP">
+			</label>
+			<div class="we">
+				<button type="button" id="imSure" onclick="choose()">确定</button>
 			</div>
-	    	</div>
-	    </div>
-	    <!--页脚-->
-	    <div class="footer">
-	    	<img class="img-logo" src="/img/logo.png" />
-			<img class="head" src="/img/字体设计.png" />
-			<div class="introduction">
-				<p>文思海辉技术有限公司旗下实用技能学习平台。与专业机构、院校合作。为您提供海量优质课堂，以及创新的在线学习体验，帮助您获得全新的个人发展和能力提升。</p>
-			</div>
-			
-			
-	    </div>
-	<script>
-		var btn1 = document.getElementById("menuBtn");  
-        btn1.onclick =function(){  
+		</div>
+		<!--<h3 id="foot">底部内容</h3>-->
+	</div>
+</div>
+<script>
+        function choose()
+        {
+var j=0
+for (var i=1;i<=sum;i++){
+ if(document.getElementById("班级"+i).checked){
+   j=i;
+ }
+}
+if(getCookie("identification")!=2)
+alert("只有学生才能选课！");
+else if(j==0){
+alert("还未选择班级！！！")
+}
+else
+{
+var classID=document.getElementById("班级"+j).value;
+$.ajax({
+        type:"POST", //请求方式
+        url: "/course/"+classID+"/choose?user_id="+getCookie("userID"),
+        cache: false,   //如果使用缓存
+        contentType : "application/json",
+        dataType: 'json',   //返回值类型
+        success:function(data){
+        alert("选课成功！");
+        window.location.href="/student/classContentTrue";
+        }
+        });
+}
+        }
+		var btn1 = document.getElementById("menuBtn");
+        btn1.onclick =function(){
             document.getElementById('view').style.display='none';
             document.getElementById('content').style.display='none';
             document.getElementById('menu').style.display='block';
-        }  
+        }
         var btn2=document.getElementById("viewBtn");
         btn2.onclick=function(){
         	document.getElementById('content').style.display='none';
         	document.getElementById('menu').style.display='none';
         	document.getElementById('view').style.display='block';
         }
-        var btn3 = document.getElementById("intronBtn");  
-        btn3.onclick =function(){  
+        var btn3 = document.getElementById("intronBtn");
+        btn3.onclick =function(){
             document.getElementById('menu').style.display='none';
             document.getElementById('view').style.display='none';
             document.getElementById('content').style.display='block';
-        }   
-	</script>
-	</body>
+        }
+        var btn4 = document.getElementById("open_btn");
+        var div = document.getElementById("background");
+        var close = document.getElementById("close-button");
+    btn4.onclick = function show() {
+	     div.style.display = "block";
+   }
+   close.onclick = function close() {
+	div.style.display = "none";
+ }
+window.onclick = function close(e) {
+	if (e.target == div) {
+		div.style.display = "none";
+	}
+}
+</script>
+</body>
 </html>
