--- a/src/main/resources/templates/student/task.html
+++ b/src/main/resources/templates/student/task.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <script src="/js/jquery-1.9.1.js" type="text/javascript" charset="utf-8"></script>
 <script src="/js/jquery.js"></script>
 <script src="/js/bootstrap.min.js"></script>
@@ -6,11 +7,11 @@
 <script src="/js/jquery.inview.min.js"></script>
 <script src="/js/cookie3.js"></script>
 <script>
+var start_time=new Date();
+var end_time=new Date();
 var taskID=getCookie("taskID");
 		window.onload=function(){
-        $("#name").html(getCookie("taskName"));
-        if(getCookie("is_finished")==0)
-        getNoQuestion(taskID);
+		getTask(taskID);
 		str="";
 		if(getCookie("identification")==1)
 		{str2="我的课程";}
@@ -50,50 +51,96 @@ var taskID=getCookie("taskID");
    }
 	</script>
 <script>
-	function getNoQuestion(id)
+	function getTask(id)
 	{
-	str="";
-	$.ajax({
+        $.ajax({
         type:"GET", //请求方式
-        url: "/task/"+id+"/question",
+        url: "/task/"+id+"/info",
         async:false,
         cache: false,   //如果使用缓存
         contentType : "application/json",
         dataType: 'json',   //返回值类型
         success:function(data){
-        str=str+"<button type=\"submit\" id=\"finish\">提交答案</button><button type=\"submit\" id=\"go\">不想做了，返回</button>";
-        $.each(data,function(i,item){
-         str=str+"<div class=\"test\"><span class=\"testTitle\">"+(i+1)+"."+item.heading+"</span><label><input type=\"radio\" name=\""+item.id+"\" value=\""+item.answer+"\" id=\""+(i+1)+".1"+"\"/><span class=\"A\">"+item.a+"</span><input type=\"radio\" name=\""+item.id+"\" value=\""+item.answer+"\" id=\""+(i+1)+".2"+"\"/><span class=\"A\">"+item.b+"</span><input type=\"radio\" name=\""+item.id+"\" value=\""+item.answer+"\" id=\""+(i+1)+".3"+"\"/><span class=\"A\">"+item.c+"</span><input type=\"radio\" name=\""+item.id+"\" value=\""+item.answer+"\" id=\""+(i+1)+".4"+"\"/><span class=\"A\">"+item.d+"</span></label></div>";
-        });
-        $("#mine").html(str);
+        setCookie("taskName",data.name);
+        $("#name").html(data.name);
+        $("#type").html("任务类型： "+data.type);
+        $("#start").html("开始时间：  "+data.start_time);
+        $("#end").html("结束时间：  "+data.end_time);
+        $("#info").html("任务介绍：  "+data.information);
+        start_time=new Date(data.start_time);
+        end_time=new Date(data.end_time);
+        if(getCookie("is_finished")==0)
+        $("#question").html("<button class=\"testButton\" onclick=\"start1()\">开始答题</button>");
+        else  if(getCookie("is_finished")==1)
+        $("#question").html("<button class=\"testButton\" onclick=\"start2()\">查看答题</button>");
         }
         });
 	}
+	function start1()
+	{
+	var myDate = new Date();
+	if(start_time>myDate)
+	alert("任务还未开始！");
+	else if(end_time<myDate)
+	alert("任务已经结束！");
+	else
+	{
+	alert("即将进行答题！");
+	window.location.href="/student/finishTraining";
+	}
+	}
+	function start2()
+	{
+	  window.location.href="/student/finishTraining";
+	}
 </script>
-<html>
+<script>
+	function goBack()
+	{
+	if(getCookie("house")==1)
+	window.location.href="/student/classContentTrue";
+	if(getCookie("house")==2)
+	window.location.href="/student/myStudy";
+	}
+</script>
 	<head>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="/css/style.css" />
-		<title>完成练习</title>
+		<title>课程详情</title>
 	</head>
 	<body>
+<div class="container">
 		<!--顶部标题栏-->
 		<div class="header" id="header">
 		</div>
-		<div class="finishPanel">
-			<span class="finshtitle" id="name"></span>
-			<div id="mine">
+	    <!--面板-->
+	    <div class="taskPanel">
+	    	<!--课程题目-->
+	    	<div class="deTitle">
+	    		<h2 id="name"></h2>
+	    		<p id="type"></p>
+	    	</div>
+	    	<!--知识点介绍-->
+	    	<div class="de">
+	    		<div id="deknowledgeT">
+	    			<p id="start"></p>
+					<p id="end"></p>
+					<p id="info"></p>
+	    		</div>
+	    	</div>
+			<div id="question">
 			</div>
-		</div>
-		  <!--页脚-->
-	    <div class="footer1">
+			<button id="backButton" onclick="goBack()">返回上页</button>
+	    </div>
+	    <!--页脚-->
+	    <div class="footer">
 	    	<img class="img-logo" src="/img/logo.png" />
 			<img class="head" src="/img/字体设计.png" />
 			<div class="introduction">
 				<p>文思海辉技术有限公司旗下实用技能学习平台。与专业机构、院校合作。为您提供海量优质课堂，以及创新的在线学习体验，帮助您获得全新的个人发展和能力提升。</p>
 			</div>
 			
-			
 	    </div>
+</div>
 	</body>
 </html>
