--- a/src/main/resources/templates/student/finishTraining.html
+++ b/src/main/resources/templates/student/finishTraining.html
@@ -6,11 +6,14 @@
 <script src="/js/jquery.inview.min.js"></script>
 <script src="/js/cookie3.js"></script>
 <script>
+var sum=0;
 var taskID=getCookie("taskID");
 		window.onload=function(){
         $("#name").html(getCookie("taskName"));
-        if(getCookie("is_finished")==0)
+        if(getCookie("nlk")==0)
         getNoQuestion(taskID);
+        else if(getCookie("nlk")==1)
+        getYesQuestion(taskID);
 		str="";
 		if(getCookie("identification")==1)
 		{str2="我的课程";}
@@ -61,11 +64,118 @@ var taskID=getCookie("taskID");
         contentType : "application/json",
         dataType: 'json',   //返回值类型
         success:function(data){
-        str=str+"<button type=\"submit\" id=\"finish\">提交答案</button><button type=\"submit\" id=\"go\">不想做了，返回</button>";
+        str=str+"<button type=\"submit\" id=\"finish\" onclick=\"goSubmit()\">提交答案</button><button type=\"submit\" id=\"go\" onclick=\"goBack()\">不想做了，返回</button>";
         $.each(data,function(i,item){
-         str=str+"<div class=\"test\"><span class=\"testTitle\">"+(i+1)+"."+item.heading+"</span><label><input type=\"radio\" name=\""+item.id+"\" value=\""+item.answer+"\" id=\""+(i+1)+".1"+"\"/><span class=\"A\">"+item.a+"</span><input type=\"radio\" name=\""+item.id+"\" value=\""+item.answer+"\" id=\""+(i+1)+".2"+"\"/><span class=\"A\">"+item.b+"</span><input type=\"radio\" name=\""+item.id+"\" value=\""+item.answer+"\" id=\""+(i+1)+".3"+"\"/><span class=\"A\">"+item.c+"</span><input type=\"radio\" name=\""+item.id+"\" value=\""+item.answer+"\" id=\""+(i+1)+".4"+"\"/><span class=\"A\">"+item.d+"</span></label></div>";
+        sum=sum+1;
+         str=str+"<div class=\"test\"><div class=\"as\"><span class=\"testTitle\">"+(i+1)+"."+item.heading+"</span></div><label><input type=\"radio\" name=\""+item.id+"\" value=\""+item.answer+"\" id=\""+(i+1)+".1"+"\"/><span class=\"A\">"+item.a+"</span><input type=\"radio\" name=\""+item.id+"\" value=\""+item.answer+"\" id=\""+(i+1)+".2"+"\"/><span class=\"A\">"+item.b+"</span><input type=\"radio\" name=\""+item.id+"\" value=\""+item.answer+"\" id=\""+(i+1)+".3"+"\"/><span class=\"A\">"+item.c+"</span><input type=\"radio\" name=\""+item.id+"\" value=\""+item.answer+"\" id=\""+(i+1)+".4"+"\"/><span class=\"A\">"+item.d+"</span></label></div>";
         });
         $("#mine").html(str);
+        }
+        });
+	}
+	function goBack()
+	{
+	alert("返回任务");
+	window.location.href="/student/task";
+	}
+	function goSubmit()
+	{
+	var right=0;
+	var num=0;
+	var j=0;
+	for (var i=1;i<=sum;i++){
+for(var j=1;j<=4;j++)
+ if(document.getElementById(i+"."+j).checked){
+    num=num+1; break;
+ }
+}
+if(sum!=num)
+alert("还未答完题，不可提交！");
+else
+{
+for (var i=1;i<=sum;i++){
+for(var j=1;j<=4;j++)
+ if(document.getElementById(i+"."+j).checked){
+   if(j==1)
+   oa='A';
+   if(j==2)
+   oa='B';
+   if(j==3)
+   oa='C';
+   if(j==4)
+   oa='D';
+   if(oa==document.getElementById(i+"."+j).value)
+   {l=1;   right=right+1;}
+   else
+   l=0;
+   bind={
+    "user_id": getCookie("userID") ,
+    "question_id":document.getElementById(i+"."+j).name,
+    "own_answer":oa,
+    "is_true":l
+    }
+       $.ajax({
+        type:"POST", //请求方式
+        url: "/task/answer",
+        async:false,
+        data:JSON.stringify(bind),
+        cache: false,   //如果使用缓存
+        contentType : "application/json",
+        dataType: 'json',   //返回值类型
+        success:function(data){
+        },
+        error:function(data){
+        }
+        });
+    break;
+ }
+}
+    go={
+    "student_id": getCookie("userID") ,
+    "task_id":taskID,
+    "grade":right
+    }
+    $.ajax({
+        type:"POST", //请求方式
+        url: "/task/answer2",
+        async:false,
+        data:JSON.stringify(go),
+        cache: false,   //如果使用缓存
+        contentType : "application/json",
+        dataType: 'json',   //返回值类型
+        success:function(data){
+        },
+        error:function(data){
+        }
+        });
+        alert("提交成功，你对了"+right+"道题!");
+        window.location.href="/student/task";
+}
+}
+</script>
+<script>
+	function getYesQuestion(id)
+	{
+	kpl=0;
+	rt=0;
+	str="";
+	$.ajax({
+        type:"GET", //请求方式
+        url: "/task/"+id+"/own?user_id="+getCookie("userID"),
+        async:false,
+        cache: false,   //如果使用缓存
+        contentType : "application/json",
+        dataType: 'json',   //返回值类型
+        success:function(data){
+        str=str+"<button type=\"submit\" id=\"finish\" onclick=\"goBack()\">返回任务</button>";
+        $.each(data,function(i,item){
+        kpl=kpl+1;
+        if(item.answer==item.wrong_answer)
+        rt=rt+1;
+         str=str+"<div class=\"test\"><div class=\"as\"><span class=\"testTitle\">"+(i+1)+"."+item.heading+"</span><span class=\"red\">"+"    你的答案： "+item.wrong_answer+"</span><span class=\"green\">"+"     正确答案："+item.answer+"</span></div><label><input type=\"radio\" name=\""+item.id+"\" value=\""+item.answer+"\" id=\""+(i+1)+".1"+"\"/><span class=\"A\">"+item.a+"</span><input type=\"radio\" name=\""+item.id+"\" value=\""+item.answer+"\" id=\""+(i+1)+".2"+"\"/><span class=\"A\">"+item.b+"</span><input type=\"radio\" name=\""+item.id+"\" value=\""+item.answer+"\" id=\""+(i+1)+".3"+"\"/><span class=\"A\">"+item.c+"</span><input type=\"radio\" name=\""+item.id+"\" value=\""+item.answer+"\" id=\""+(i+1)+".4"+"\"/><span class=\"A\">"+item.d+"</span></label></div>";
+        });
+        $("#mine").html(str);
+        $("#grade").html("你的成绩为： "+rt+"/"+kpl);
         }
         });
 	}
@@ -82,6 +192,7 @@ var taskID=getCookie("taskID");
 		</div>
 		<div class="finishPanel">
 			<span class="finshtitle" id="name"></span>
+			<span class="fi" id="grade"></span>
 			<div id="mine">
 			</div>
 		</div>
