--- a/src/main/resources/templates/student/index.html
+++ b/src/main/resources/templates/student/index.html
@@ -45,7 +45,7 @@ function goSchool(id)
    else
    {
    if(getCookie("identification")==1)
-   window.location.href="/student/classj";
+   window.location.href="/student/teacherClass";
    if(getCookie("identification")==2)
    window.location.href="/student/myStudy";
    }
