--- a/src/main/resources/templates/student/message.html
+++ b/src/main/resources/templates/student/message.html
@@ -35,6 +35,9 @@
    if(userID==null){alert("请先登录!");}
    else
    {
+   if(getCookie("identification")==1)
+   window.location.href="/student/teacherClass";
+   if(getCookie("identification")==2)
    window.location.href="/student/myStudy";}
    }
       function joinMessage()
