--- a/src/main/resources/templates/student/teacherClass.html
+++ b/src/main/resources/templates/student/teacherClass.html
@@ -77,7 +77,7 @@ var userID=getCookie("userID");
 	{
 	setCookie("courseID",id);
 	setCookie("teacher_name",id1);
-    alert(id);
+    window.location.href="/student/teacherClassContent";
 	}
 </script>
 <script>
